# QStegano

./: .gitignore  LICENSE  QStegano.pri  QStegano.pro  README.md  setup.bat
src/: Common.cpp  Common.h  Decode.cpp  Decode.h  EnvironmentProxy.h  Hide.cpp  Hide.h  ImageContext.cpp  ImageContext.h  LSB.cpp  LSB.h  LSBInverted.cpp  LSBInverted.h  LSBXor.cpp  LSBXor.h  MethodHandler.cpp  MethodHandler.h  OPAP.cpp  OPAP.h  QStegano.cpp  QStegano.h  QStegano.qrc  QStegano.ui  main.cpp
tests/: .gitignore  CMakeLists.txt  runUnitTests
tests/src/: ImageContext_tests.cpp  LSBInverted_tests.cpp  LSBXor_tests.cpp  LSB_tests.cpp  MethodHandler_test.cpp  OPAP_tests.cpp  UnitTestsCommon.h
